@@ -1,4 +1,4 @@
-# Extracts information from a project that has a distutils setup.py file.
+# Extracts information from a project
 import build
 import build.util
 import logging
@@ -240,6 +240,16 @@ def get_setuppy_data(path):
     with FakeContext(path):
         with SetupMonkey() as sm:
             if os.path.isfile("setup.py"):
+                import warnings
+
+                warnings.showwarning(
+                    message="Using setup.py is deprecated, and Pyroma support for setup.py "
+                    "will be dropped in version 5.0",
+                    category=DeprecationWarning,
+                    filename=__name__ + ".py",
+                    lineno=242,
+                )
+
                 try:
                     distro = run_setup("setup.py", stop_after="config")
 
